@@ -5,19 +5,9 @@
 #ifndef __KBD_BACKLIGHT_H__
 #define __KBD_BACKLIGHT_H__
 
-#ifdef __powerpc__
-int
-kbd_get_lmuaddr(void);
-
-char*
-kbd_get_i2cdev(int addr);
-
-int 
-kbd_probe_lmu(int addr, char* i2cdev);
-
-#else
+#ifndef __powerpc__
 #define KBD_BACKLIGHT           "/sys/class/leds/smc:kbd_backlight/brightness"
-#endif /* __powerpc__ */
+#endif /* !__powerpc__ */
 
 
 #define KBD_BACKLIGHT_OFF       0
